# libjpeg

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  bootstrap  cdjpeg.c  cdjpeg.h  cjpeg.c  ckconfig.c  coderules.doc  configure.ac  djpeg.c  install.doc  jconfig.cfg  jconfig.h  jconfig.hin  jerror.c  jinclude.h  jmemdos.c  jmemname.c  jmorecfg.h  jpegint.h  jpeglib.h  jpegtran.c  qiproject.xml  rdbmp.c  rdppm.c  rdtarga.c  wrjpgcom.c
build-aux/: install-sh  libtool.m4
templates/: jconfig.bcc  jconfig.dj  jconfig.doc  jconfig.mac  jconfig.manx  jconfig.mc6  jconfig.sas  jconfig.st  jconfig.vc  jconfig.vms  jconfig.wat
vcs/: local.rb
